[project]
name = "cv-cue-wrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Scott",email = "alexscott@arista.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "click (>=8.3.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
cv-cue-wrapper = "cv_cue_wrapper.main:main"
